Fix dropdown item alignment

--- a/wp-content/themes/cfcommunity/assets/less/global.less
+++ b/wp-content/themes/cfcommunity/assets/less/global.less
@@ -243,3 +243,7 @@ a:hover {
 .single-post .mlp_quicklinks_links {
   display: none;
 }
+
+.dropdown-menu .pull-left {
+  float: none !important;
+}
